[package]
name = "mixfam-recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
headless_chrome = "1.0.5"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
